syntax = "proto3";

import "google/protobuf/wrappers.proto";
option csharp_namespace = "GrpcSolution.Product.V1";


package grpc_solution.product.v1;

service ProductService {
	// Получить все продукты
	rpc GetAllProducts(GetAllProductsRequest) returns (GetAllProductsResponse);
	
	rpc AddProduct(AddProductRequest) returns (AddProductResponse);
	
	rpc GetProductById(GetProductByIdRequest) returns (GetProductByIdResponse);
}

message GetAllProductsRequest{
	int32 from = 1;
	int32 amount = 2;
}

message GetAllProductsResponse{
	repeated ProductInfo products = 1;

	message ProductInfo{
		int64 id = 1;
		string product_name = 2;
		optional Decimal cost = 3;
	}
}






message GetProductByIdRequest {
	google.protobuf.Int64Value id = 1;
}

message GetProductByIdResponse {
	optional google.protobuf.StringValue product_name = 1;
	optional Decimal cost = 2;
}

message AddProductRequest{
	string name = 1;
	optional Decimal cost = 2;
}
message AddProductResponse{
	google.protobuf.Int64Value id = 1;
}



message Decimal
{
	google.protobuf.Int64Value left_value = 1;
	google.protobuf.Int64Value right_value = 2;
}